# tellydb

./: .clangd  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  FILE.md  LICENSE  Makefile  README.md  install.sh  meson.build
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  c.yml  docker.yml
benchmark/: benchmark.c
docs/: AUTH.md  COMMANDS.md  FILE.md  SPECS.md
headers/: auth.h  btree.h  commands.h  config.h  database.h  hashtable.h  io.h  list.h  resp.h  server.h  telly.h  transactions.h  utils.h
headers/commands/: _commands.h  _data.h  commands.h  data.h  macros.h
headers/database/: _database.h  _file.h  _kv.h  _list.h  database.h  file.h  kv.h  list.h
headers/resp/: macros.h  resp.h  types.h
headers/server/: _client.h  _io.h  _macros.h  _server.h  client.h  io.h  macros.h  server.h
headers/thread/: queue.h  thread.h
headers/transactions/: private.h  public.h
headers/utils/: arena.h  hashset.h  hashtable.h  integer.h  linkedlist.h  logging.h  notifier.h  number.h  queue.h  string.h  tqueue.h  utils.h  vector.h
meson/: debug.ini  profiler.ini  release.ini  relwithdeb.ini  tsan.ini
src/: telly.c  telly.h
src/btree/: btree.c  delete.c  find.c  free.c  insert.c  utils.c
src/commands/: client.c  command.c  decr.c  get.c  hget.c  hset.c  htype.c  incr.c  info.c  memory.c  ping.c  set.c  time.c  type.c
src/commands/data/: bgsave.c  dbsize.c  decr.c  exists.c  get.c  incr.c  save.c  set.c  type.c
src/commands/database/: bgsave.c  dbsize.c  flushall.c  flushdb.c  lastsave.c  save.c  select.c
src/commands/generic/: age.c  auth.c  client.c  command.c  discard.c  echo.c  exec.c  hello.c  info.c  lastsave.c  memory.c  multi.c  ping.c  pwd.c  status.c  time.c
src/commands/hash/: hset.c
src/commands/hashtable/: hdel.c  hget.c  hgetall.c  hkeys.c  hlen.c  hset.c  htype.c  hvals.c
src/commands/kv/: append.c  decr.c  decrby.c  del.c  exists.c  get.c  incr.c  incrby.c  rename.c  set.c  type.c
src/commands/list/: lindex.c  llen.c  lpop.c  lpush.c  ltype.c  rpop.c  rpush.c
src/commands/utils/: client.c  command.c  info.c  memory.c  ping.c  time.c
src/database/: cache.c  database.c  databases.c  delete.c  file.c  get.c  hashtable.c  kv.c  list.c  read.c  set.c
src/database/file/: file.c  file.h  generate.c  size.c
src/database/read/: bytes.c  read.c  read.h  types.c
src/hashtable/: fv.c  grow.c  hashtable.c  memory.c
src/io/: io.h  read_command.c  requests.c  threads.c
src/list/: pop.c  push.c
src/resp/: data.c  inline.c  resp.c  resp.h  take.c  take.h  utils.c
src/server/: auth.c  client.c  commands.c  events.c  io.c  password.c  read_command.c  resp.c  server.c  transactions.c  utils.c
src/thread/: queue.c
src/transactions/: thread.c  transactions.c  transactions.h  variables.c
src/utils/: arena.c  btree.c  command_hash.gperf  config.c  errors.c  file.c  hash.c  hashset.c  hashtable.c  hashtable.h  integer.c  is.c  linkedlist.c  logging.c  memcpy_aligned.c  memset_aligned.c  notifier.c  number.c  queue.c  string.c  tqueue.c  value.c  vector.c
tests/: README.md  constants.py  meson_test_runner.py  pycodestyle.cfg  utils.py
tests/generic/: test_age.py  test_client.py  test_command.py  test_echo.py  test_info.py  test_ping.py  test_status.py
tests/kv/: test_client.py
tests/list/: test_lindex.py  test_llen.py  test_lpop.py  test_lpush.py  test_rpop.py  test_rpush.py
utils/: README.md  benchmark.c  tests.c
